[gd_scene load_steps=4 format=3 uid="uid://cx1cl51q5v2gw"]

[ext_resource type="PackedScene" uid="uid://b3ehmtrkvb7qc" path="res://ui/left_text_panel.tscn" id="1_5nsy1"]
[ext_resource type="Script" path="res://ui/display.gd" id="1_d2i1s"]
[ext_resource type="PackedScene" uid="uid://debd8mgq87o6b" path="res://ui/right_text_panel.tscn" id="2_yxs6y"]

[node name="Display" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_d2i1s")

[node name="CRTBackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.235294, 0.223529, 0.235294, 1)

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftTextPanel" parent="VBoxContainer" instance=ExtResource("1_5nsy1")]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
script = null

[node name="CenterDisplay" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="CentralText" type="Label" parent="VBoxContainer/CenterDisplay"]
modulate = Color(1, 0.690196, 0, 1)
layout_mode = 2
text = "Welcome To JovEx SSDS OS

version 0.6.23rc.4

Copyright (c) Jovian Express Corporation, 1982
All Rights Reserved
JovEx is a registered trademark of  Jovian Express Corp."
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightTextPanel" parent="VBoxContainer" instance=ExtResource("2_yxs6y")]
layout_mode = 2
size_flags_horizontal = 3
script = null
